--- a/src/views/login.html
+++ b/src/views/login.html
@@ -85,22 +85,22 @@
         <section class="fondo-login">
             <article class="contenedor-login">
                 <form action="" method="post">
-                    <label class="titulo-login">Mi Cuenta</label>
+                    <label class="titulo-login">Acceder</label>
 
                     <label for="usuario">Usuario o email</label>
-                    <input type="text" id="usuario">
+                    <input type="text" id="usuario" required>
 
                     <label for="contrasenia">Contraseña</label>
-                    <input type="password" id="contrasenia">
+                    <input type="password" id="contrasenia" required>
 
-                    <a href="/register">¿Olvidaste tu contraseña?</a>
+                    <p><a href="">¿Olvidaste tu contraseña?</a> | <a href="/register">Crear cuenta</a></p>
 
                     <button type="submit" class="acceder">Acceder</button>
                 </form>
             </article>
 
             <article class="frase-login">
-                <p>Descubre la tecnología en un océano de posibilidades.</p>
+                <p>Navega hacia la innovación al ingresar a un océano de oportunidades tecnológicas.</p>
             </article>
         </section>
     </main>
