--- a/public/css/styles-login.css
+++ b/public/css/styles-login.css
@@ -1,7 +1,7 @@
 /* ESTILOS DEL CONTENEDOR DE LOGIN */
 
 .fondo-login {
-    background-image: url(/img/fondo-login.jpg);
+    background-image: url(/img/fondo-login-register.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -28,7 +28,6 @@
 .contenedor-login label {
     margin-bottom: 0.5rem;
     font-weight: bold;
-  
 }
 
 .contenedor-login input {
@@ -37,17 +36,21 @@
     border: 1px solid #ced4da;
     height: 2.5rem;
     padding: 0.5rem;
+    font-size: 1rem;
 }
 
 .contenedor-login input:focus {
-    outline: solid 2px #001F54;
+    outline: solid 3px rgba(146, 220, 229, 0.5 );
 }
 
 .contenedor-login a {
-    text-align: center;
-    margin-bottom: 1rem;
     text-decoration: none;
     color: #001F54;
+}
+
+.contenedor-login p {
+    text-align: center;
+    margin-bottom: 1rem;
 }
 
 .titulo-login {
