--- a/src/views/register.html
+++ b/src/views/register.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap" rel="stylesheet">
 
     <!-- ESTILOS -->
     <link rel="stylesheet" href="/css/styles-register.css">
@@ -81,33 +82,33 @@
     </header>
 
     <main>
-        <div >
-            <form class="register">
-                <h3 class="acceder">Registrarse</h3>
-                <br>
-                <label for="nombre">Nombre de usuario *</label>
-                <br>
-                <ol><il><input type="text"></ol></il>
-                <br>
-                <label for="nombre">Dieccion de correo electronico *</label>
-                <br>
-                <ol><il><input type="text"></ol></il>
-                <br>
-                <label for="nombre">Contraseña *</label>
-                <br>
-                <ol><il><input type="password"></ol></il>
-                <br>
-                <label for="nombre">Repetir contraseña *</label>
-                <br>
-                <ol><il><input type="password"></ol></il>
-                <br>
-                <button type="submit" class="btn"> Registrarse</button>
-                <br>
-                
-                
-            </form>
-        </div>
-    <br>
+        <section class="fondo-register">
+            <article class="contenedor-register">
+                <form action="" method="post">
+                    <label class="titulo-register">Registrarse</label>
+
+                    <label for="usuario">Usuario</label>
+                    <input type="text" id="usuario" required>
+
+                    <label for="email">Email</label>
+                    <input type="email" id="email" required>
+
+                    <label for="contrasenia">Contraseña</label>
+                    <input type="password" id="contrasenia" required>
+
+                    <label for="confirmar-contrasenia">Confirmar contraseña</label>
+                    <input type="password" id="confirmar-contrasenia" required>
+
+                    <a href="/login">¿Ya tienes cuenta? Ingresa</a>
+
+                    <button type="submit" class="registrarse">Registrarse</button>
+                </form>
+            </article>
+
+            <article class="frase-register">
+                <p>Explora un mar de posibilidades tecnológicas al abrir la puerta a nuestro mundo digital.</p>
+            </article>
+        </section>
     </main>
 
     <footer>
